Correções gerais, versionamento de repositórios e serviços, implementação de restful para produts (rota de listagem)
